--- a/index.html
+++ b/index.html
@@ -12,6 +12,65 @@
 
 <p>语文</p>
 <hr>
+<p>演示视频：</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<p>　</p>
+<hr>
+<p>测试</p>
+<p>
+<object classid="clsid:6BF52A52-394A-11D3-B153-00C04F79FAA6" id="WindowsMediaPlayer1" width="720" height="442">
+  <param name="URL" value="cs.mp4">
+  <param name="rate" value="1">
+  <param name="balance" value="0">
+  <param name="currentPosition" value="0">
+  <param name="defaultFrame" value>
+  <param name="playCount" value="1">
+  <param name="autoStart" value="-1">
+  <param name="currentMarker" value="0">
+  <param name="invokeURLs" value="-1">
+  <param name="baseURL" value>
+  <param name="volume" value="50">
+  <param name="mute" value="0">
+  <param name="uiMode" value="full">
+  <param name="stretchToFit" value="0">
+  <param name="windowlessVideo" value="0">
+  <param name="enabled" value="-1">
+  <param name="enableContextMenu" value="-1">
+  <param name="fullScreen" value="0">
+  <param name="SAMIStyle" value>
+  <param name="SAMILang" value>
+  <param name="SAMIFilename" value>
+  <param name="captioningID" value>
+  <param name="enableErrorDialogs" value="0">
+  <param name="_cx" value="12700">
+  <param name="_cy" value="7796">
+</object>
+</p>
 </body>
 
 </html>
