--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <hr>
 <p>演示视频：</p>
 <p>　</p>
-<p>双击放大！！！</p>
+<p>右键播放的视频窗口--缩放--全屏！！！</p>
 <p>
 <object classid="clsid:6BF52A52-394A-11D3-B153-00C04F79FAA6" id="WindowsMediaPlayer2" width="818" height="504">
   <param name="URL" value="sun1.mp4">
