--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
 <body>
 
 <p>语文</p>
+<object classid="clsid:8E27C92B-1264-101C-8A2F-040224009C02" id="Calendar1">
+  <param name="_Version" value="524288">
+  <param name="_ExtentX" value="7620">
+  <param name="_ExtentY" value="5080">
+  <param name="_StockProps" value="1">
+  <param name="BackColor" value="-2147483633">
+  <param name="Year" value="2024">
+  <param name="Month" value="10">
+  <param name="Day" value="12">
+  <param name="DayLength" value="1">
+  <param name="MonthLength" value="1">
+  <param name="DayFontColor" value="0">
+  <param name="FirstDay" value="1">
+  <param name="GridCellEffect" value="1">
+  <param name="GridFontColor" value="10485760">
+  <param name="GridLinesColor" value="-2147483632">
+  <param name="ShowDateSelectors" value="-1">
+  <param name="ShowDays" value="-1">
+  <param name="ShowHorizontalGrid" value="-1">
+  <param name="ShowTitle" value="-1">
+  <param name="ShowVerticalGrid" value="-1">
+  <param name="TitleFontColor" value="10485760">
+  <param name="ValueIsNull" value="0">
+</object>
+
 <hr>
 <p>演示视频：</p>
 <p>　</p>
