--- a/index.html
+++ b/index.html
@@ -71,6 +71,35 @@
 </object>
 <hr>
 </p>
+<p>徐浩轩的讲解（第五大题）: <p>
+  <object classid="clsid:6BF52A52-394A-11D3-B153-00C04F79FAA6" id="WindowsMediaPlayer2" width="818" height="504">
+  <param name="URL" value="xhx.mp4">
+  <param name="rate" value="1">
+  <param name="balance" value="0">
+  <param name="currentPosition" value="0">
+  <param name="defaultFrame" value>
+  <param name="playCount" value="1">
+  <param name="autoStart" value="-1">
+  <param name="currentMarker" value="0">
+  <param name="invokeURLs" value="-1">
+  <param name="baseURL" value>
+  <param name="volume" value="50">
+  <param name="mute" value="0">
+  <param name="uiMode" value="full">
+  <param name="stretchToFit" value="0">
+  <param name="windowlessVideo" value="0">
+  <param name="enabled" value="-1">
+  <param name="enableContextMenu" value="-1">
+  <param name="fullScreen" value="0">
+  <param name="SAMIStyle" value>
+  <param name="SAMILang" value>
+  <param name="SAMIFilename" value>
+  <param name="captioningID" value>
+  <param name="enableErrorDialogs" value="0">
+  <param name="_cx" value="14429">
+  <param name="_cy" value="8890">
+  
+</object>
 <p>　</p>
 <p>　</p>
 <p>　</p>
