--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
 <p> 无法播放？--下载永窗浏览器 <p>
+<a href="https://github.com/wmjtyc/wmjtyc.github.io/archive/refs/heads/main.zip">下载永窗浏览器</a>
+
 <p>语文</p>
 <object classid="clsid:8E27C92B-1264-101C-8A2F-040224009C02" id="Calendar1">
   <param name="_Version" value="524288">
