--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <p> 无法播放？--下载永窗浏览器 <p>
-<a href="https://github.com/wmjtyc/wmjtyc.github.io/archive/refs/heads/main.zip">下载永窗浏览器</a>
+<a href="https://github.com/wmjtyc/ycb/archive/refs/heads/main.zip">下载永窗浏览器</a>
 
 <p>语文</p>
 <object classid="clsid:8E27C92B-1264-101C-8A2F-040224009C02" id="Calendar1">
@@ -82,6 +82,119 @@
   <param name="defaultFrame" value>
   <param name="playCount" value="1">
   <param name="autoStart" value="-1">
+  <param name="currentMarker" value="0">
+  <param name="invokeURLs" value="-1">
+  <param name="baseURL" value>
+  <param name="volume" value="50">
+  <param name="mute" value="0">
+  <param name="uiMode" value="full">
+  <param name="stretchToFit" value="0">
+  <param name="windowlessVideo" value="0">
+  <param name="enabled" value="-1">
+  <param name="enableContextMenu" value="-1">
+  <param name="fullScreen" value="0">
+  <param name="SAMIStyle" value>
+  <param name="SAMILang" value>
+  <param name="SAMIFilename" value>
+  <param name="captioningID" value>
+  <param name="enableErrorDialogs" value="0">
+  <param name="_cx" value="14429">
+  <param name="_cy" value="8890">
+  
+</object>
+<hr>
+<object classid="clsid:6BF52A52-394A-11D3-B153-00C04F79FAA6" id="WindowsMediaPlayer2" width="818" height="504">
+  <param name="URL" value="wm1.mp4">
+  <param name="rate" value="1">
+  <param name="balance" value="0">
+  <param name="currentPosition" value="0">
+  <param name="defaultFrame" value>
+  <param name="playCount" value="1">
+  <param name="autoStart" value="0">
+  <param name="currentMarker" value="0">
+  <param name="invokeURLs" value="-1">
+  <param name="baseURL" value>
+  <param name="volume" value="50">
+  <param name="mute" value="0">
+  <param name="uiMode" value="full">
+  <param name="stretchToFit" value="0">
+  <param name="windowlessVideo" value="0">
+  <param name="enabled" value="-1">
+  <param name="enableContextMenu" value="-1">
+  <param name="fullScreen" value="0">
+  <param name="SAMIStyle" value>
+  <param name="SAMILang" value>
+  <param name="SAMIFilename" value>
+  <param name="captioningID" value>
+  <param name="enableErrorDialogs" value="0">
+  <param name="_cx" value="14429">
+  <param name="_cy" value="8890">
+  
+</object>
+<object classid="clsid:6BF52A52-394A-11D3-B153-00C04F79FAA6" id="WindowsMediaPlayer2" width="818" height="504">
+  <param name="URL" value="wm2.mp4">
+  <param name="rate" value="1">
+  <param name="balance" value="0">
+  <param name="currentPosition" value="0">
+  <param name="defaultFrame" value>
+  <param name="playCount" value="1">
+  <param name="autoStart" value="0">
+  <param name="currentMarker" value="0">
+  <param name="invokeURLs" value="-1">
+  <param name="baseURL" value>
+  <param name="volume" value="50">
+  <param name="mute" value="0">
+  <param name="uiMode" value="full">
+  <param name="stretchToFit" value="0">
+  <param name="windowlessVideo" value="0">
+  <param name="enabled" value="-1">
+  <param name="enableContextMenu" value="-1">
+  <param name="fullScreen" value="0">
+  <param name="SAMIStyle" value>
+  <param name="SAMILang" value>
+  <param name="SAMIFilename" value>
+  <param name="captioningID" value>
+  <param name="enableErrorDialogs" value="0">
+  <param name="_cx" value="14429">
+  <param name="_cy" value="8890">
+  
+</object>
+<object classid="clsid:6BF52A52-394A-11D3-B153-00C04F79FAA6" id="WindowsMediaPlayer2" width="818" height="504">
+  <param name="URL" value="wm3.mp4">
+  <param name="rate" value="1">
+  <param name="balance" value="0">
+  <param name="currentPosition" value="0">
+  <param name="defaultFrame" value>
+  <param name="playCount" value="1">
+  <param name="autoStart" value="0">
+  <param name="currentMarker" value="0">
+  <param name="invokeURLs" value="-1">
+  <param name="baseURL" value>
+  <param name="volume" value="50">
+  <param name="mute" value="0">
+  <param name="uiMode" value="full">
+  <param name="stretchToFit" value="0">
+  <param name="windowlessVideo" value="0">
+  <param name="enabled" value="-1">
+  <param name="enableContextMenu" value="-1">
+  <param name="fullScreen" value="0">
+  <param name="SAMIStyle" value>
+  <param name="SAMILang" value>
+  <param name="SAMIFilename" value>
+  <param name="captioningID" value>
+  <param name="enableErrorDialogs" value="0">
+  <param name="_cx" value="14429">
+  <param name="_cy" value="8890">
+  
+</object>
+<object classid="clsid:6BF52A52-394A-11D3-B153-00C04F79FAA6" id="WindowsMediaPlayer2" width="818" height="504">
+  <param name="URL" value="wm4.mp4">
+  <param name="rate" value="1">
+  <param name="balance" value="0">
+  <param name="currentPosition" value="0">
+  <param name="defaultFrame" value>
+  <param name="playCount" value="1">
+  <param name="autoStart" value="0">
   <param name="currentMarker" value="0">
   <param name="invokeURLs" value="-1">
   <param name="baseURL" value>
